--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^4.18.1",
     "mongodb": "^6.19.0",
     "mongoose": "^7.3.4",
